# MAVSDK

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_shared.sh  build_static.sh  build_with_already_generated_mavlink.sh  install_dep.sh
.github/workflows/: X86-20.04.yml  X86-20.04.yml.bak  X86-22.04.yml  X86-22.04.yml.bak  X86.yml  android-arm64.yml  android.yml  jetson.yml  jetson.yml.bak  mac.yml  mac.yml.bak  main_ohd.yml  official.yml  rpi.yml  rpi.yml.bak  rpi_legacy.yml  windows-debug.yml  windows-release.yml  windows.yml  windows.yml.bak  windows_test.yml  windows_test.yml.bak  windows_test2  windows_test2.yml
docker/: Dockerfile.dockcross-linux-arm64-custom  Dockerfile.dockcross-linux-armv6-custom  Dockerfile.dockcross-linux-armv7-custom
src/integration_tests/: action_hover_async.cpp  action_takeoff_and_kill.cpp  mission_raw_import_and_fly.cpp
src/mavsdk/core/: filesystem_include.h  fs.cpp  mavlink_command_sender.cpp  mavlink_mission_transfer_test.cpp  mavlink_parameter_receiver.cpp  mavlink_parameter_receiver.h  mavlink_parameter_sender.cpp  mavlink_parameter_sender.h  mavlink_parameter_set.cpp  mavlink_parameter_set.h  mavsdk_impl.cpp  system_impl.cpp  system_impl.h  timesync.cpp  udp_connection.cpp
src/mavsdk/plugins/action/: action.cpp  action_impl.cpp  action_impl.h
src/mavsdk/plugins/camera_server/: camera_server_impl.cpp
src/mavsdk/plugins/mavlink_passthrough/: CMakeLists.txt
src/system_tests/: param_custom_set_and_get.cpp  param_get_all.cpp  param_set_and_get.cpp
tools/: generate_mavlink_headers.sh
(+7 files in other folders)
